v0.003 To do: 1. Class diagram 2. Readme